--- a/html/templates/shipment_add.html
+++ b/html/templates/shipment_add.html
@@ -111,7 +111,7 @@
                         <label id="{{ shipment_form.pdf_1.id_for_label }}-error" class="error" for="{{ shipment_form.pdf_1.id_for_label }}">{{ error|escape }}</label>
                       {% endfor %}
                     <br>
-                    <label>{{ shipment_form.pdf_2.label }}:</label><br><p>{% trans "Upload não autorizado" %}</p>
+                    <label>PDF 2:</label><br><p>{% trans "Upload não autorizado" %}</p>
                 </div>
             </div>
           </div>
