ajuste de erro 500. parametrização django debug e paypal test.
só estava comentado o html, mas o código python mesmo assim era
executado.

--- a/html/templates/includes/layout.html
+++ b/html/templates/includes/layout.html
@@ -87,9 +87,9 @@
                     <!--<li class="{% block lotes-u %}{% endblock %}">-->
                         <!--<a href="/lotes" ><i class="fa fa-th"></i> {% trans "Lotes" %}</a>-->
                     <!--</li>-->
-                    <li>
-                        <a href="#" class="abre-tutorial"><i class="fa fa-leanpub"></i> Tutorial Plataforma</a>
-                    </li>
+                    <!--<li>-->
+                        <!--<a href="#" class="abre-tutorial"><i class="fa fa-leanpub"></i> {% trans "Tutorial Plataforma" %}</a>-->
+                    <!--</li>-->
                     {% if user|has_product_perm:'view_products' or user|has_product_perm:'add_product' %}
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle logo-marca-link operacional-conf" data-toggle="dropdown"><i class="fa fa-archive"></i> {% trans "Estoque" %} <b class="caret"></b></a>
