--- a/html/static/css/style.css
+++ b/html/static/css/style.css
@@ -223,6 +223,15 @@ fieldset[disabled] .btn-xl.active {
         width: 1195px;
    }
 
+   .btn-menor{
+        padding: 7px 19px;
+        float: left;
+   }
+
+   .red-br #services{
+        margin-top: 100px;
+   }
+
   .navbar-custom .navbar-brand {
     font-size: 2em;
     -webkit-transition: all 0.3s;
