--- a/html/templates/detalhe_lote.html
+++ b/html/templates/detalhe_lote.html
@@ -8,7 +8,7 @@
 
         </div>
         <div class="col-md-10 main">
-          <h1 class="page-header"><i class="fa fa-th"></i> Lote 1</h1>
+          <h1 class="page-header"><i class="fa fa-cart-arrow-down"></i> Nome do produto/lote</h1>
           <div class="row">
               <div class="col-md-4">
                   <p><strong>Situação: </strong> Vendido</p>
@@ -24,12 +24,12 @@
               <div class="col-md-4">
                   <!-- Aparece apenas para usuarios comuns -->
                     <br><br>
-                    <a class="btn btn-default" href="#"><i class="fa fa-fw fa-paypal"></i> Comprar Lote Agora</a>
+                    <a class="btn btn-default" href="#"><i class="fa fa-fw fa-paypal"></i> Comprar Agora</a>
                   <!-- fim botao compra -->
               </div>
           </div>
           <div class="row">
-              <br><h3><i class="fa fa-list-ol"></i> Lista dos produtos do lote</h3><br><br>
+              <br><h3><i class="fa fa-list-ol"></i> Produto(s)</h3><br><br>
           </div>
           <div class="row lista itens">
               <div class="col-md-4 item">
@@ -192,7 +192,7 @@
             <!-- Aparece apenas para usuarios comuns -->
             <br><br>
 
-            <a class="btn btn-default" href="#"><i class="fa fa-fw fa-paypal"></i> Comprar Lote Agora</a>
+            <a class="btn btn-default" href="#"><i class="fa fa-fw fa-paypal"></i> Comprar Agora</a>
 
             <!-- fim botao compra -->
 
