--- a/html/templates/lote_cadastro.html
+++ b/html/templates/lote_cadastro.html
@@ -10,7 +10,7 @@
 
         </div>
         <div class="col-md-6 main">
-          <h1 class="page-header"><i class="fa fa-th"></i> Adicionar Lote</h1>
+          <h1 class="page-header"><i class="fa fa-cart-arrow-down"></i> Adicionar Produto/Lote</h1>
           <form>
               <div class="form-group col-md-12">
                 <label for="nome">Nome*</label>
@@ -41,7 +41,7 @@
                     <input type="text" class="form-control menor" id="total" placeholder="Digite Valor total...">
               </div>
               <div class="col-md-12">
-                <br><h4><i class="fa fa-list-ol"></i> Lista de Produtos do lote:</h4><br><br>
+                <br><h4><i class="fa fa-list-ol"></i> Produto(s):</h4><br><br>
               </div>
               <div class="lista-produtos">
                 <div class="produto">
