--- a/html/templates/lista_lotes.html
+++ b/html/templates/lista_lotes.html
@@ -10,14 +10,10 @@
 
         </div>
         <div class="col-md-10 main">
-          <h1 class="page-header"><i class="fa fa-th"></i> Lotes</h1>
+          <h1 class="page-header"><i class="fa fa-shopping-bag"></i> Loja</h1>
           <div class="row">
               <div class="filtros col-md-12">
                 <h3><i class="fa fa-filter"></i> Filtros</h3>  <br>
-                <div class="form-group col-md-2">
-                    <label for="filtro-id">Id</label>
-                    <input type="text" class="form-control" id="filtro-id" placeholder="Id...">
-                </div>
                 <div class="form-group col-md-3">
                     <label for="filtro-nome">Nome</label>
                     <input type="text" class="form-control" id="filtro-nome" placeholder="Nome...">
@@ -32,13 +28,12 @@
             <div class="col-md-3 col-sm-6 hero-feature">
                 <div class="thumbnail">
                     <div class="caption">
-                        <h3 class="text-center border-bottom titulo-lote"><i class="fa fa-th"></i><br> Lote 4</h3>
+                        <h3 class="text-center border-bottom titulo-lote"><i class="fa fa-cart-arrow-down"></i><br> Lote 4</h3>
                         <p><strong>Lucro: </strong> U$ 83,27</p>
                         <p><strong>ROI médio: </strong> 53,30%</p>
                         <p><strong>Valor a pagar: </strong> U$ 162,89</p>
                         <p class="text-center border-top btn-comprar-list">
-                            <a href="#" class="btn btn-primary">Comprar</a>
-                            <a href="/lote/detalhe" class="btn btn-default">Detalhes</a>
+                            <a href="/lote/detalhe" class="btn btn-primary"><i class="fa fa-fw fa-shopping-cart"></i> Comprar</a>
                         </p>
                     </div>
                 </div>
@@ -46,13 +41,12 @@
               <div class="col-md-3 col-sm-6 hero-feature">
                 <div class="thumbnail">
                     <div class="caption">
-                        <h3 class="text-center border-bottom titulo-lote"><i class="fa fa-th"></i><br> Lote 3</h3>
+                        <h3 class="text-center border-bottom titulo-lote"><i class="fa fa-cart-arrow-down"></i><br> Lote 3</h3>
                         <p><strong>Lucro: </strong> U$ 83,27</p>
                         <p><strong>ROI médio: </strong> 53,30%</p>
                         <p><strong>Valor a pagar: </strong> U$ 162,89</p>
                         <p class="text-center border-top btn-comprar-list">
-                            <a href="#" class="btn btn-primary">Comprar</a>
-                            <a href="/lote/detalhe" class="btn btn-default">Detalhes</a>
+                            <a href="/lote/detalhe" class="btn btn-primary"><i class="fa fa-fw fa-shopping-cart"></i> Comprar</a>
                         </p>
                     </div>
                 </div>
@@ -60,13 +54,12 @@
               <div class="col-md-3 col-sm-6 hero-feature">
                 <div class="thumbnail">
                     <div class="caption">
-                        <h3 class="text-center border-bottom titulo-lote"><i class="fa fa-th"></i><br> Lote 2</h3>
+                        <h3 class="text-center border-bottom titulo-lote"><i class="fa fa-cart-arrow-down"></i><br> Lote 2</h3>
                         <p><strong>Lucro: </strong> U$ 83,27</p>
                         <p><strong>ROI médio: </strong> 53,30%</p>
                         <p><strong>Valor a pagar: </strong> U$ 162,89</p>
                         <p class="text-center border-top btn-comprar-list">
-                            <a href="#" class="btn btn-primary">Comprar</a>
-                            <a href="/lote/detalhe" class="btn btn-default">Detalhes</a>
+                            <a href="/lote/detalhe" class="btn btn-primary"><i class="fa fa-fw fa-shopping-cart"></i> Comprar</a>
                         </p>
                     </div>
                 </div>
@@ -74,13 +67,12 @@
               <div class="col-md-3 col-sm-6 hero-feature">
                 <div class="thumbnail">
                     <div class="caption">
-                        <h3 class="text-center border-bottom titulo-lote"><i class="fa fa-th"></i><br> Lote 1</h3>
+                        <h3 class="text-center border-bottom titulo-lote"><i class="fa fa-cart-arrow-down"></i><br> Lote 1</h3>
                         <p><strong>Lucro: </strong> U$ 83,27</p>
                         <p><strong>ROI médio: </strong> 53,30%</p>
                         <p><strong>Valor a pagar: </strong> U$ 162,89</p>
                         <p class="text-center border-top btn-comprar-list">
-                            <a href="#" class="btn btn-primary">Comprar</a>
-                            <a href="/lote/detalhe" class="btn btn-default">Detalhes</a>
+                            <a href="/lote/detalhe" class="btn btn-primary"><i class="fa fa-fw fa-shopping-cart"></i> Comprar</a>
                         </p>
                     </div>
                 </div>
@@ -88,13 +80,12 @@
               <div class="col-md-3 col-sm-6 hero-feature">
                 <div class="thumbnail">
                     <div class="caption">
-                        <h3 class="text-center border-bottom titulo-lote"><i class="fa fa-th"></i><br> Lote 0</h3>
+                        <h3 class="text-center border-bottom titulo-lote"><i class="fa fa-cart-arrow-down"></i><br> Lote 0</h3>
                         <p><strong>Lucro: </strong> U$ 83,27</p>
                         <p><strong>ROI médio: </strong> 53,30%</p>
                         <p><strong>Valor a pagar: </strong> U$ 162,89</p>
                         <p class="text-center border-top btn-comprar-list">
-                            <a href="#" class="btn btn-primary">Comprar</a>
-                            <a href="/lote/detalhe" class="btn btn-default">Detalhes</a>
+                            <a href="/lote/detalhe" class="btn btn-primary"><i class="fa fa-fw fa-shopping-cart"></i> Comprar</a>
                         </p>
                     </div>
                 </div>
