--- a/html/templates/product_stock.html
+++ b/html/templates/product_stock.html
@@ -71,19 +71,19 @@
             {% endif %}
             <br><br>
             {% if products.paginator.count > 0 %}
-            <table class="table table-striped">
+            <table class="table table-striped table-bordered">
               <thead>
                 <tr>
-                  <th>{{ id }}</th>
-                  <th>{{ name }}</th>
+                  <th><a title="Ordenar pelo Id" href="#">{{ id }} <i class="fa fa-fw fa-sort-amount-asc"></i></a></th>
+                  <th><a title="Ordenar pelo nome" href="#">{{ name }} <i class="fa fa-fw fa-sort-amount-asc"></i></a></th>
                   <th>{% trans "Data de Envio" %}</th>
-                  <th class="center">{% trans "Quantidade" %}</th>
+                  <th class="center"><a title="Ordenar pela quantidade" href="#">{% trans "Quantidade" %} <i class="fa fa-fw fa-sort-amount-asc"></i></a></th>
                   {% if user|has_user_perm:'view_users' %}
                   <!-- somente admin visualiza -->
-                  <th class="center">{{ user_label }}</th>
+                  <th class="center"><a title="Ordenar pelo usuario" href="#">{{ user_label }} <i class="fa fa-fw fa-sort-amount-asc"></i></a></th>
                   <!-- fim campo -->
                   {% endif %}
-                  <th class="center">{% trans "Status" %}</th>
+                  <th class="center"><a title="Ordenar pelo status" href="#">{% trans "Status" %} <i class="fa fa-fw fa-sort-amount-asc"></i></a></th>
                   {% if user|has_shipment_perm:'add_shipment' %}
                   <th class="center">{% trans "Envio" %}</th>
                   {% endif %}
